--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "carp-irc",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "An irc library",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "makedocs": "jsdoc -c jsdoc.json"
   },
   "repository": {
     "type": "git",
